# efda-scraper

./: .enc.example  .env.example  .gitignore  README.md  endpoints.catalog.json  pyproject.toml  requirements.txt
.github/workflows/: scrape.yml
dashboard/: .gitignore  package-lock.json  package.json
dashboard/scripts/: add-indexes.ts  push-to-turso.mjs
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/analytics/: actions.ts  page.tsx  report-config.ts
dashboard/src/app/imports/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/products/: page.tsx
dashboard/src/components/: kpi-cards.tsx  theme-toggle.tsx
dashboard/src/components/analytics/: analytics-client.tsx  product-picker.tsx  report-filters.tsx  report-selector.tsx
dashboard/src/components/charts/: avg-order-value.tsx  imports-over-time.tsx  market-by-category.tsx  monthly-supplier-chart.tsx  monthly-volume.tsx  port-distribution.tsx  price-over-time.tsx  price-spread.tsx  product-decline.tsx  product-growth.tsx  top-agents.tsx  (+6 more)
dashboard/src/lib/: auth.ts  compare-transforms.ts  db.ts  format.ts  queries.ts
data/: import_product_supplier_links.csv  import_products.csv
data/raw/ui/: imports_page_0001_debug.html
scripts/: efda_login_recording.py  normalize.py  run_pipeline.sh  scrape_all.py  scrape_products.py
src/efda_scraper/: __init__.py  __main__.py  api_capture.py  api_runner.py  auth.py  browser_pipeline.py  cli.py  client.py  config.py  discovery.py  models.py  pipeline.py  playwright_utils.py  storage.py
(+22 files in other folders)
