[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efda-scraper"
version = "0.1.0"
description = "Authenticated scraper pipeline for EFDA import portal"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Local Project" }
]
dependencies = [
  "httpx>=0.27.0",
  "playwright>=1.50.0",
  "pydantic>=2.10.0",
]

[project.scripts]
efda-scraper = "efda_scraper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
